Add replace_token.
